--- a/manifests/koiosdigital/anemoi_mgm210p_zigbee_ncp.yaml
+++ b/manifests/koiosdigital/anemoi_mgm210p_zigbee_ncp.yaml
@@ -28,7 +28,7 @@ c_defines:
     value: 32
 
   SL_IOSTREAM_USART_VCOM_BAUDRATE: 115200
-  SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: usartHwFlowControlCtsAndRts
+  SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: usartHwFlowControlNone
 
   SL_IOSTREAM_USART_VCOM_PERIPHERAL: USART0
   SL_IOSTREAM_USART_VCOM_PERIPHERAL_NO: 0
